--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.14",
+    "json-server": "^0.17.4",
     "pinia": "^3.0.3",
+    "tailwindcss": "^4.1.14",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
