--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "flubber": "^0.4.2",
     "json-server": "^0.17.4",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.14",
